# jumpthegun-precommit-wrapper

./: LICENSE  README.md  pyproject.toml
jumpthegun_precommit_wrapper/: entrypoint.sh  main.py
